@@ -16,6 +16,9 @@ This file contains changes in REQUIRED dependencies for standard CPAN phases (co
  [Removed / runtime requires]
  - utf8
 
+ [Removed / test requires]
+ - Dist::Zilla::Util::Test::KENTNL 1.003001
+
 1.001000 2014-08-30T12:52:09Z
  [Added / test requires]
  - Dist::Zilla::Util::Test::KENTNL 1.003001
