@@ -2,13 +2,14 @@ Release history for Dist-Zilla-Plugin-Author-KENTNL-Prereqs-Latest-Selective
 
 {{$NEXT}}
  - Bugfix: Avoid test failures with -Ddefault_inc_excludes_dot
+ - Avoid use of Test::KENTNL in tests
 
  [Dependencies::Stats]
  - Dependencies changed since 1.001000, see misc/*.deps* for details
  - configure: +1 (recommends: ↑1)
  - develop: +13 ↑4 -3 (recommends: +1, suggests: ↑2)
  - runtime: ↓1 -1 (recommends: +1)
- - test: +1 ↓1 (recommends: ↑1 ↓1)
+ - test: +1 ↓1 -1 (recommends: ↑1 ↓1)
 
 1.001000 2014-08-30T12:52:09Z
  [00 Minor]
